--- a/charts/flowise/Chart.yaml
+++ b/charts/flowise/Chart.yaml
@@ -15,14 +15,14 @@ dependencies:
   - name: common
     version: 2.9.0
     repository: https://charts.bitnami.com/bitnami/
-  - name: mariadb
-    version: 11.5.7
-    repository: https://charts.bitnami.com/bitnami/
-    condition: mariadb.enabled
-  - name: postgresql
-    version: 12.11.1
-    repository: https://charts.bitnami.com/bitnami/
-    condition: postgresql.enabled
+  # - name: mariadb
+  #   version: 11.5.7
+  #   repository: https://charts.bitnami.com/bitnami/
+  #   condition: mariadb.enabled
+  # - name: postgresql
+  #   version: 12.11.1
+  #   repository: https://charts.bitnami.com/bitnami/
+  #   condition: postgresql.enabled
 annotations:
   artifacthub.io/signKey: |
     fingerprint: 9E57D2479D48B84463EF491F66D280CE667AD6C8
