pick values from external postgresql config

--- a/charts/flowise/templates/deployment.yaml
+++ b/charts/flowise/templates/deployment.yaml
@@ -102,7 +102,7 @@ spec:
             - name: POSTGRESQL_DATABASE
               value: {{ include "flowise.postgresql.database" . | quote }}
             - name: POSTGRESQL_SSL
-              value: {{ include "flowise.postgresql.ssl" . | lower }}
+              value: {{ include "flowise.externalPostgresql.ssl" . | lower }}
           resources:
             {{- toYaml .Values.wait.resources | nindent 12 }}
         {{- end }}
@@ -180,7 +180,7 @@ spec:
             - name: DATABASE_NAME
               value: {{ include "flowise.postgresql.database" . | quote }}
             - name: POSTGRESQL_SSL
-              value: {{ include "flowise.postgresql.ssl" . | lower }}
+              value: {{ include "flowise.externalPostgresql.ssl" . | lower }}
             {{- end }}
             {{- if .Values.extraEnvVars }}
             {{- include "common.tplvalues.render" (dict "value" .Values.extraEnvVars "context" $) | nindent 12 }}
