--- a/charts/flowise/templates/deployment.yaml
+++ b/charts/flowise/templates/deployment.yaml
@@ -86,7 +86,7 @@ spec:
             - /bin/sh
             - -ec
             - |
-              wait4x postgresql "postgres://${POSTGRESQL_USERNAME}:${POSTGRESQL_PASSWORD}@${POSTGRESQL_HOST}:${POSTGRESQL_PORT}/${POSTGRESQL_DATABASE}?sslmode=${POSTGRESQL_SSL}" --timeout 0
+              wait4x postgresql "postgres://${POSTGRESQL_USERNAME}:${POSTGRESQL_PASSWORD}@${POSTGRESQL_HOST}:${POSTGRESQL_PORT}/${POSTGRESQL_DATABASE}?sslmode=${POSTGRESQL_SSL_MODE}" --timeout 0
           env:
             - name: POSTGRESQL_HOST
               value: {{ include "flowise.postgresql.host" . | quote }}
@@ -101,8 +101,8 @@ spec:
                   key: {{ include "flowise.postgresql.secretKeyPassword" . }}
             - name: POSTGRESQL_DATABASE
               value: {{ include "flowise.postgresql.database" . | quote }}
-            - name: POSTGRESQL_SSL
-              value: {{ include "flowise.externalPostgresql.ssl" . | lower }}
+            - name: POSTGRESQL_SSL_MODE
+              value: {{ include "flowise.externalPostgresql.ssl.mode" . | lower }}
           resources:
             {{- toYaml .Values.wait.resources | nindent 12 }}
         {{- end }}
@@ -180,7 +180,7 @@ spec:
             - name: DATABASE_NAME
               value: {{ include "flowise.postgresql.database" . | quote }}
             - name: POSTGRESQL_SSL
-              value: {{ include "flowise.externalPostgresql.ssl" . | lower }}
+              value: {{ include "flowise.externalPostgresql.ssl.enabled" . | lower }}
             {{- end }}
             {{- if .Values.extraEnvVars }}
             {{- include "common.tplvalues.render" (dict "value" .Values.extraEnvVars "context" $) | nindent 12 }}
