set DATABASE_SSL from externalPostgresql config

--- a/charts/flowise/templates/deployment.yaml
+++ b/charts/flowise/templates/deployment.yaml
@@ -179,7 +179,7 @@ spec:
                   key: {{ include "flowise.postgresql.secretKeyPassword" . }}
             - name: DATABASE_NAME
               value: {{ include "flowise.postgresql.database" . | quote }}
-            - name: POSTGRESQL_SSL
+            - name: DATABASE_SSL
               value: {{ include "flowise.externalPostgresql.ssl.enabled" . | toString | lower | quote }}
             {{- end }}
             {{- if .Values.extraEnvVars }}
